workshop_setup_static.yaml
# Create a new namespace called student0
kind: Namespace
apiVersion: v1
metadata:
  name: student0
---
# Create a new namespace called student1
kind: Namespace
apiVersion: v1
metadata:
  name: student1
---
# Create a new namespace called student2
kind: Namespace
apiVersion: v1
metadata:
  name: student2
---
# Create a new namespace called student3
kind: Namespace
apiVersion: v1
metadata:
  name: student3
---
# Create a new namespace called student4
kind: Namespace
apiVersion: v1
metadata:
  name: student4
---
# Create a new namespace called student5
kind: Namespace
apiVersion: v1
metadata:
  name: student5
---
# Create a new namespace called student6
kind: Namespace
apiVersion: v1
metadata:
  name: student6
---
# Create a new namespace called student7
kind: Namespace
apiVersion: v1
metadata:
  name: student7
---
# Create a new namespace called student8
kind: Namespace
apiVersion: v1
metadata:
  name: student8
---
# Create a new namespace called student9
kind: Namespace
apiVersion: v1
metadata:
  name: student9
