hello-world-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-studentX-ingress
  namespace: studentX
  annotations:
    kubernetes.io/ingress.class: "tectonic"
spec:
  rules:
    - host: hello-world-studentX.walgreens.se.aws.event-cloud.net
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-world-studentX
              servicePort: 80
